[package]
name = "dji-log-parser-bindings"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
dji-log-parser.workspace = true
chrono = "0.4"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[lib]
crate-type = ["cdylib"]
name = "dji_log_parser_binding"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
